# EduTrackX

./: LICENSE  README.md  pyproject.toml  student.db
services/admin_portal/: app.py
services/admin_portal/static/css/: style.css
services/admin_portal/templates/: dashboard.html  login.html  success.html
services/backend_api/app/: crud.py  database.py  main.py  models.py  schemas.py
services/backend_api/app/services/: fee_calculator.py  id_generator.py
services/data_dashboard/: app.py
